<resources>
    <string name="app_name">Park App</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="login">Entrar</string>
    <string name="register">Registrar</string>
    <string name="purchase_ticket">Comprar Bilhete</string>
    <string name="ticket_type">Tipo de Bilhete</string>
    <string name="adult">Adulto</string>
    <string name="child">Criança</string>
    <string name="senior">Idoso</string>
    <string name="quantity">Quantidade</string>
    <string name="total_price">Preço Total</string>
    <string name="welcome_to_park">Bem-vindo ao Parque</string>
    <string name="todays_highlights">Destaques do Dia</string>
    <string name="highlight_description">Confira as atrações especiais e eventos que estão acontecendo hoje no parque!</string>
    <string name="featured_attractions">Atrações em Destaque</string>
    <string name="buy_tickets">Comprar Bilhetes</string>
    <string name="my_tickets">Meus Bilhetes</string>
    <string name="active_tickets">Bilhetes Ativos</string>
    <string name="past_tickets">Bilhetes Anteriores</string>
    <string name="add_ticket">Adicionar Bilhete</string>
    <string name="profile">Perfil</string>
    <string name="name">Nome</string>
    <string name="phone">Telefone</string>
    <string name="change_password">Alterar Senha</string>
    <string name="logout">Sair</string>
    <string name="title_home">Home</string>
    <string name="title_purchase">Comprar</string>
    <string name="title_profile">Perfil</string>
    <string name="purchase">Comprar</string>
    <string name="attraction_image">Imagem da atração</string>
</resources>